--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <i class="fa fa-bars" onclick="showmenu()"></i>
         </nav>
         <div class="text-box">
-            <h1> World's Beggest University</h1>
+            <h1> World's Biggest University</h1>
             <p>Making website is now one of the easiest thing in the world <br>You just need to learn HTML, CSS,
                 Javascript
                 and you are good to go.</p>
