--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
@@ -43,9 +42,74 @@
 
     <!---------Course-------->
     <section class="course">
-        <h1></h1>
-        <p></p>
+        <h1>Courses We Offer</h1>
+        <p>The best way to learn</p>
+        <div class="row">
+            <div class="course-col">
+                <h3> Intermidiate</h3>
+                <p>bla bla bla bla bl bal bal bal balasdasdasdasdasdasdasd </p>
+            </div>
+            <div class="course-col">
+                <h3> Degree</h3>
+                <p>bla bla bla bla bl bal bal bal balsdasdasd asdasdasdasd</p>
+            </div>
+            <div class="course-col">
+                <h3> Post Graduation</h3>
+                <p>bla bla bla bla bl bal bal asdasdasdabal asdasdasdbal asdasdasdasd</p>
+            </div>
+        </div>
     </section>
+
+    <!------campus------>
+    <section class="campus">
+        <h1>Our Global campus</h1>
+        <p>some thing you need to know about this</p>
+        <div class="row">
+            <div class="campus-col">
+                <img src="Images/london.png" alt="">
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="Images/newyork.png" alt="">
+                <div class="layer">
+                    <h3>NEWYORK</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="Images/washington.png" alt="">
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!----Facilities----->
+    <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>The Best facilities for student</p>
+        <div class="row">
+            <div class="facilities-col">
+                <img src="Images/library.png" alt="">
+                <h3>World Class libary</h3>
+                <p>biggest libary of the world</p>
+            </div>
+            <div class="facilities-col">
+                <img src="Images/basketball.png" alt="">
+                <h3>Largest Play Ground</h3>
+                <p>All sport you can play heare</p>
+            </div>
+            <div class="facilities-col">
+                <img src="Images/cafeteria.png" alt="">
+                <h3>Tasty and Healthy Food</h3>
+                <p>some thing about this cafeteria</p>
+            </div>
+
+        </div>
+    </section>
+
     <!--------javascript for toggle menu -------->
     <script>
         var navLinks = document.getElementById("navLinks")
