--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+
+    <!----header--->
     <section class="header">
         <nav>
             <a href="index.html">
-                <img src="images/logo.png" alt="">
+                <img src="Images/logo.png" alt="">
             </a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
