--- a/index.html
+++ b/index.html
@@ -112,6 +112,75 @@
         </div>
     </section>
 
+    <!--Testimonials-->
+    <section class="Testimonials">
+        <h1>What Our Student Says</h1>
+        <p>The Best facilities for student</p>
+        <div class="row">
+            <div class="Testimonials-col">
+                <img src="Images/user1.jpg" alt="">
+                <div>
+                    <p>
+
+                        I absolutely loved my entire experience at here - I've never regretted my decision
+                        to attend this school for a second. I love the incredible history in our institution. I've loved
+                        the passionate people, the
+                        professors who people from most other universities only read about, and the opportunities it
+                        affords both on campus and off.
+                    </p>
+                    <h3>Lily Collins </h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+            </div>
+            <div class="Testimonials-col">
+                <img src="Images/user2.jpg" alt="">
+                <div>
+                    <p>
+
+                        Eduford is simply wonderful. The students, here, are amazing. It seems like almost everyday, you
+                        find out something about a fellow student that is breathtaking that you didn't know. At the same
+                        time, however, most people are so down-to-earth that you might not ever have guessed their
+                        magnificent accomplishments...and they're extremely nice.
+                    </p>
+                    <h3>Robert Pattinson </h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---------Call to action-------->
+    <section class="cta">
+        <h1>
+            <h1>Enroll for our varios online courses <br>anywhere from the world</h1>
+            <a href="" class="hero-btn">CONTAC US</a>
+        </h1>
+    </section>
+
+    <!---------Footer-------->
+    <section class="footer">
+        <h4>
+            About Us
+        </h4>
+        <p>If you want to know more about us, please contact us following these link <br> Thank you so much and have a
+            nice day. </p>
+        <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+        </div>
+        <p>Made with <i class="fa fa-heart-o"></i> By PhamDucHuy </p>
+    </section>
+
     <!--------javascript for toggle menu -------->
     <script>
         var navLinks = document.getElementById("navLinks")
