--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!---------Call to action-------->
     <section class="cta">
         <h1>
-            <h1>Enroll for our varios online courses <br>anywhere from the world</h1>
+            <h1>Enroll for our online courses <br>anywhere from the world</h1>
             <a href="" class="hero-btn">CONTAC US</a>
         </h1>
     </section>
