--- a/Course.html
+++ b/Course.html
@@ -16,7 +16,7 @@
 <body>
 
     <!----header--->
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html">
                 <img src="Images/logo.png" alt="">
@@ -33,16 +33,9 @@
             </div>
             <i class="fa fa-bars" onclick="showmenu()"></i>
         </nav>
-        <div class="text-box">
-            <h1> World's Biggest University</h1>
-            <p>Making website is now one of the easiest thing in the world <br>You just need to learn HTML, CSS,
-                Javascript
-                and you are good to go.</p>
-            <a href="" class="hero-btn">Visit Us to know more</a>
-        </div>
+        <h1>Our Courses</h1>
     </section>
-
-    <!---------Course-------->
+    <!---------course-------->
     <section class="course">
         <h1>Courses We Offer</h1>
         <p>The best way to learn</p>
@@ -61,33 +54,6 @@
             </div>
         </div>
     </section>
-
-    <!------campus------>
-    <section class="campus">
-        <h1>Our Global campus</h1>
-        <p>some thing you need to know about this</p>
-        <div class="row">
-            <div class="campus-col">
-                <img src="Images/london.png" alt="">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="Images/newyork.png" alt="">
-                <div class="layer">
-                    <h3>NEWYORK</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="Images/washington.png" alt="">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!----Facilities----->
     <section class="facilities">
         <h1>Our Facilities</h1>
@@ -112,64 +78,11 @@
         </div>
     </section>
 
-    <!--Testimonials-->
-    <section class="Testimonials">
-        <h1>What Our Student Says</h1>
-        <p>The Best facilities for student</p>
-        <div class="row">
-            <div class="Testimonials-col">
-                <img src="Images/user1.jpg" alt="">
-                <div>
-                    <p>
-
-                        I absolutely loved my entire experience at here - I've never regretted my decision
-                        to attend this school for a second. I love the incredible history in our institution. I've loved
-                        the passionate people, the
-                        professors who people from most other universities only read about, and the opportunities it
-                        affords both on campus and off.
-                    </p>
-                    <h3>Lily Collins </h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-            </div>
-            <div class="Testimonials-col">
-                <img src="Images/user2.jpg" alt="">
-                <div>
-                    <p>
-
-                        Eduford is simply wonderful. The students, here, are amazing. It seems like almost everyday, you
-                        find out something about a fellow student that is breathtaking that you didn't know. At the same
-                        time, however, most people are so down-to-earth that you might not ever have guessed their
-                        magnificent accomplishments...and they're extremely nice.
-                    </p>
-                    <h3>Robert Pattinson </h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!---------Call to action-------->
-    <section class="cta">
-        <h1>
-            <h1>Enroll for our online courses <br>anywhere from the world</h1>
-            <a href="" class="hero-btn">CONTAC US</a>
-        </h1>
-    </section>
-
     <!---------Footer-------->
     <section class="footer">
-        <h4>
+        <h1>
             About Us
-        </h4>
+        </h1>
         <p>If you want to know more about us, please contact us following these link <br> Thank you so much and have a
             nice day. </p>
         <div class="icons">
