--- a/contact.html
+++ b/contact.html
@@ -33,24 +33,51 @@
             </div>
             <i class="fa fa-bars" onclick="showmenu()"></i>
         </nav>
-        <h1>About Us</h1>
+        <h1>Contact Us</h1>
     </section>
-    <!--About us content-->
-    <section class="about-us">
+
+    <!--contact us-->
+    <section class="location">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31353.622219837544!2d106.78490789229893!3d10.79577577351207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317526953e88a903%3A0x183ed98804083da0!2zVsOybmcgeG9heSBMacOqbiBQaMaw4budbmc!5e0!3m2!1sen!2s!4v1619493246555!5m2!1sen!2s"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+    </section>
+    <section class="contact-us">
         <div class="row">
-            <div class="about-col">
-                <h1>We are the world's largest university </h1>
-                <p>Eduford is simply wonderful. The students, here, are amazing. It seems like almost everyday, you
-                    find out something about a fellow student that is breathtaking that you didn't know. At the same
-                    time, however, most people are so down-to-earth that you might not ever have guessed their
-                    magnificent accomplishments...and they're extremely nice.</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+            <div class="contact-col">
+                <div>
+                    <i class="fa fa-home"></i>
+                    <span>
+                        <h5>Road , Building</h5>
+                        <p>Tran Phu, SuperTech</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <span>
+                        <h5>+84 123345567678</h5>
+                        <p>Monday to Sonday, 24/7 </p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-envelope-o"></i>
+                    <span>
+                        <h5>ABC@XYZ.com</h5>
+                        <p>Email Us</p>
+                    </span>
+                </div>
             </div>
-            <div class="about-col">
-                <img src="Images/about.jpg" alt="">
+            <div class="contact-col">
+                <form action="">
+                    <input type="text" placeholder="Enter your Name" required>
+                    <input type="email" placeholder="Enter your email address" required>
+                    <input type="text" placeholder="Enter your subject" required>
+                    <textarea rows="8" placeholder="Message" required></textarea>
+                    <button type="submit" class="hero-btn red-btn">Send Message</button>
+                </form>
             </div>
         </div>
-
     </section>
 
     <!---------Footer-------->
